--- a/project/web/src/components/domains/solplace-logs-list/styles.module.css
+++ b/project/web/src/components/domains/solplace-logs-list/styles.module.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: calc(100vw - 3rem);
   height: 100%;
 }
 
